# geryon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  profiles.example.yaml  pyproject.toml
docs/: cli-reference.md  dsl.md  examples.md  experiments.md  geryon-config.md  getting-started.md  index.md  packs.md  profiles.md  python-api.md  python-interface.md  runtime-artifacts.md
examples/: README.md  cleanup.sh
examples/common/: cleanup_example.sh  dummy_hydra_app.py  flaky_app.py  run_example.sh
examples/common_usage/: README.md  flaky_app.py
examples/common_usage/01_basics_and_sweeps/: experiment.yaml
examples/common_usage/01_reused_packs/: experiment.yaml
examples/common_usage/02_ablation_study/: experiment.yaml
examples/common_usage/02_constraints_and_filtering/: launch.sh
examples/common_usage/03_composition_and_variants/: README.md  (+2 more)
examples/configs/: README.md  profiles.yaml
examples/merge_policies/: README.md
examples/usage/: README.md  cleanup.sh
src/geryon/: __init__.py  __main__.py  _logging.py  cli.py  collect.py  config_compose.py  execution.py  models.py  planner.py  profiles.py  status.py  store.py  submitit_backend.py  task_event_schema.py  utils.py
src/geryon_launcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_affinity.py  test_cli_workflows.py  test_config_compose_v4.py  test_dsl_api.py  test_examples_merge_policies.py  test_executor_start_cleanup.py  test_interface_api.py  test_merge_policy_modes.py  test_pylauncher_executor.py  test_task_event_schema.py
(+73 files in other folders)
