[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geryon"
version = "0.1.0"
description = "Geryon: a runner for giant experiments using Hydra"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "rich>=13.7",
  "psutil>=5.9",
]

[project.optional-dependencies]
slurm = ["submitit>=1.5.2"]
pylauncher = ["pylauncher>=4.0"]
dev = ["pytest>=8.2"]

[project.scripts]
geryon = "geryon.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
